2004-08-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* calendar/time-date.el (time-to-number-of-days): New function.
	Imported from from Gnus.

2004-07-22  Kim F. Storm  <storm@cua.dk>

	* progmodes/make-mode.el: Fix comments.

2004-07-21  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* printing.el: Doc fix.

2004-07-20  Luc Teirlinck  <teirllm@auburn.edu>

	* frame.el (modify-all-frames-parameters): Minor doc fix.

2004-07-20  Richard M. Stallman  <rms@gnu.org>

	* textmodes/fill.el (fill-comment-paragraph): Handle indent-tabs-mode.
	(fill-delete-newlines): Call sentence-end as function.
	(fill-nobreak-p, canonically-space-region): Likewise.
	(fill-nobreak-p): If this break point is at the end of the line,
	don't consider the newline which follows as a reason to return t.

2004-07-19  John Paul Wallington  <jpw@gnu.org>

	* dired-aux.el (dired-file-set-difference): Don't use `caddr'.

2004-07-18  Luc Teirlinck  <teirllm@auburn.edu>

	* dired-aux.el (dired-do-kill-lines): Expand docstring.
	Delete irrelevant code.

2004-07-17  Kai Grossjohann  <kai.grossjohann@gmx.net>

	* net/tramp.el (tramp-handle-verify-visited-file-modtime): New
	docstring.  From Luc Teirlinck.

2004-07-17  Luc Teirlinck  <teirllm@auburn.edu>

	* autorevert.el: Describe `Auto Revert Tail Mode' in `Commentary'
	section.
	(auto-revert-handler): Do not check `auto-revert-tail-mode' for
	non-file buffers.  We know it is nil.

2004-07-17  Kai Grossjohann  <kai.grossjohann@gmx.net>

	Sync with Tramp 2.0.43.

	* net/tramp.el (tramp-handle-verify-visited-file-modtime): Remove
	outdated comment.
	(tramp-locked, tramp-locker): New variables for implementing a
	global lock.
	(tramp-sh-file-name-handler): Use them to implement the global
	lock.

2004-07-13  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (all): Code cleanup.  Change all `tramp-handle-xxx'
	calls to respective `xxx` calls.
	(tramp-process-alive-regexp): Precise doc string.
	(tramp-multi-action-process-alive): New defun.